--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                   <h3>Project One</h3>
                   <h4>Subheading</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                  <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+
                 </div>
             </div>
 
@@ -27,7 +27,11 @@
             <div class="col-lg-12 top-buffer row">
               <div class="col-sm-4 text-center">
                   <img class="img-responsive" src="http://upload.wikimedia.org/wikipedia/en/b/b7/Smiley_fill.gif">
-                  <h3><center>Flood Fill</center> <small>Job Title</small></h3>
+                  <h3><center>FloodFill</center></h3>
+                  <h9>description</h9>
+                  <br>
+                  <A HREF="https://github.com/Shaynawr/Small-Projects/blob/master/week2_day3/Flood%20Fill.py">View more here</A>
+
               </div>
               <div class="col-sm-4 text-center">
                   <img class="img-responsive" src="http://placehold.it/750x450">
